fix for bug 66508. r=pinkerton, sr=sfraser.  Landing fix from 6.0 branch to detect orderlyDisconnects.