mozilla/nsprpub/pr/include/md/_macos.h
@@ -91,7 +91,7 @@ typedef struct _MDSocketCallerInfo {
 
 struct _MDFileDesc {
     PRInt32     osfd;
-	PRBool      connectionOpen;
+	PRBool      orderlyDisconnect;
 	PRBool      readReady;
 	PRBool      writeReady;
 	PRBool      exceptReady;
